--- a/ui/package.json
+++ b/ui/package.json
@@ -3,8 +3,8 @@
     "version": "0.0.0",
     "scripts": {
         "ng": "ng",
-        "start": "ng serve",
-        "start:insecure": "ng serve --host 0.0.0.0",
+        "start": "ng serve --proxy-config ./proxy.json",
+        "start:insecure": "ng serve --host 0.0.0.0 --proxy-config ./proxy.json",
         "build": "ng build --output-path ../public --prod",
         "test": "ng test",
         "lint": "ng lint"
