--- a/package.json
+++ b/package.json
@@ -1,24 +1,14 @@
 {
     "name": "node-simple-site",
     "version": "1.0.0",
-    "description": "basic template for a site using NodeJS, ExpressJS, Angular and DRTools",
+    "description": "Basic template for a site using NodeJS, ExpressJS, Angular and DRTools",
     "main": "server.js",
-    "dependencies": {
-        "body-parser": "^1.18.3",
-        "chalk": "^2.4.1",
-        "cors": "^2.8.4",
-        "drtools": "^0.7.0",
-        "express": "^4.16.3",
-        "http": "0.0.0"
-    },
-    "devDependencies": {
-        "nodemon": "^1.18.0"
-    },
     "scripts": {
+        "lint": "eslint . --fix || true",
         "start": "node server.js",
         "start:live": "nodemon server.js",
-        "ui:live": "cd ui && npm run start:insecure",
-        "ui:build": "cd ui && npm run build"
+        "ui:build": "cd ui && npm run build",
+        "ui:live": "cd ui && npm run start:insecure"
     },
     "repository": {
         "type": "git",
@@ -26,9 +16,26 @@
     },
     "keywords": [],
     "author": "",
-    "license": "ISC",
+    "license": "MIT",
     "bugs": {
         "url": "https://github.com/daemonraco/node-simple-site/issues"
     },
-    "homepage": "https://github.com/daemonraco/node-simple-site#readme"
+    "homepage": "https://github.com/daemonraco/node-simple-site#readme",
+    "dependencies": {
+        "body-parser": "^1.18.3",
+        "chalk": "^2.4.1",
+        "drtools": "^0.7.5",
+        "express": "^4.16.3",
+        "http": "0.0.0",
+        "http-status-codes": "^1.3.0"
+    },
+    "devDependencies": {
+        "eslint": "^5.12.1",
+        "eslint-config-standard": "^12.0.0",
+        "eslint-plugin-import": "^2.15.0",
+        "eslint-plugin-node": "^8.0.1",
+        "eslint-plugin-promise": "^4.0.1",
+        "eslint-plugin-standard": "^4.0.0",
+        "nodemon": "^1.18.9"
+    }
 }
