--- a/ui/package.json
+++ b/ui/package.json
@@ -21,6 +21,7 @@
         "@angular/platform-browser-dynamic": "^6.0.3",
         "@angular/router": "^6.0.3",
         "core-js": "^2.5.4",
+        "http-status-codes": "^1.3.0",
         "ng-drtools": "0.0.5",
         "rxjs": "^6.0.0",
         "zone.js": "^0.8.26"
