--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
         "drtools": "^0.7.5",
         "express": "^4.16.3",
         "http": "0.0.0",
-        "http-status-codes": "^1.3.0"
+        "http-status-codes": "^1.3.0",
+        "winston": "^3.1.0"
     },
     "devDependencies": {
         "eslint": "^5.12.1",
